package DAO.factory;

public class SqliteConnectionFactory {
}
