
package Presentacion.Obeserver;

public interface Observer {
    void update(Tablero tablero);
}

/*
package Presentacion.Obeserver;

public interface Observer {
    void actualizar(String estado);
}
*/