@startuml C4_Ahorcado
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml

package "presentacion" {
  class Main {
    + static void main(String[] args)
  }

  class Tablero {
    - String palabraSecreta
    - int oportunidades
    - List<Observer> observadores
    + void registrarObservador(Observer o)
    + void notificarObservadores()
    + void verificarLetra(char letra)
  }

  interface Observer {
    + void actualizar()
  }

  class Jugador implements Observer {
    - String nombre
    + void actualizar()
  }

  ' Relaciones dentro de presentación
  Main --> Tablero
  Jugador -|> Observer
  Tablero -> Observer
  Tablero "1" o-- "*" Jugador : "Observa cambios"
}

package "negocio" {
  class LogDb {
    - Conn conexion
    + void guardarEstadoJuego(Tablero tablero)
  }

  ' Relación dentro de negocio
  Tablero --> LogDb : "Guarda estado"
  LogDb ..|> presentacion.Observer : "Implementa Observer"
}

package "DAO" {
  class Dao {
    + void insertarDatos(Tablero tablero)
  }

  package "factory" {
    class ConnFactory {
      + static Conn getConexion(String tipoBD)
    }

    interface Conn {
      + Connection getConnection()
    }

    class MysqlConnectionFactory implements ConnFactory{
      + static Conn getConexion()
    }

    class SqliteConnectionFactory implements ConnFactory {
      + static Conn getConexion()
    }

    class JMysql implements Conn {
        + void insertarDatos(Tablero tablero)
      }

    class JSqlite implements Conn {
      + void insertarDatos(Tablero tablero)
    }

    enum Database {
        JMysql, JSqlite
    }
  }

  ' Relaciones dentro de DAO
  LogDb --> Dao : "Accede a la BD"
  Dao --> factory.ConnFactory : "Selecciona conexión"

  ' Relaciones dentro de factory

  factory.MysqlConnectionFactory --> JMysql : "Crea conexión MySQL"
  factory.SqliteConnectionFactory --> JSqlite : "Crea conexión SQLite"

  Dao ..|> Database : "Permisos de lectura"
}

note "Las lineas (flechas) punteadas representan la implementacion de una clase en otra, por ejemplo: LogDb implementa Observer" as Nota1
@enduml
